# House-Designer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
designs/: README.md
designs/ambia-sasum/: house.json  requirements.jsonl
designs/ambia-sasum/panos/: balcao_g.hash  balcao_u.hash  bath_1.hash  bath_2_u.hash  bath_g.hash  bedroom_1.hash  bedroom_2_u.hash  bedroom_g.hash  corridor_u.hash  landing_u.hash  living_dining.hash  powder.hash  utility.hash
designs/goa-two-floor/: house.json
designs/goa-two-floor/panos/: bedroom_2.hash  bedroom_3.hash  dining.hash  kitchen.hash  landing.hash  living_room.hash  master_bedroom.hash  stairwell_g.hash
docs/: IMPLEMENTATION_LOG.md  REQUIREMENTS.md
fixtures/: house.sample.json  plot.json
fixtures/ambia-sasum/: plot.json  source.json
src/goa_house/: __init__.py  api.py  approval.py  cli.py  diffs.py  state.py
src/goa_house/agents/: extractor.py  prompt_builder.py  sessions.py
src/goa_house/render/: massing.py  panorama.py  placeholder.py
src/goa_house/tour/: pannellum.py
tests/: test_api.py  test_approval.py  test_diffs.py  test_extractor.py  test_panorama.py  test_prompt_builder.py  test_sample_pipeline.py  test_sessions.py  test_state.py  test_tour_pannellum.py
web/: app.js  index.html
