[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goa-house"
version = "0.1.0"
description = "Local-first iterative house designer for a Goa plot with LLM-grounded panorama tour."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Goa House" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "shapely>=2.0",
  "matplotlib>=3.8",
  "pillow>=10.0",
  "numpy>=1.26",
  "anthropic>=0.40",
  "openai>=1.40",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
]

[project.scripts]
goa-house = "goa_house.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/goa_house"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
